# educanoferta

./: .gitignore  README.md  config.py  deploy.sh  main.py  pyproject.toml  requirements.txt  run.sh  settings.py  utils.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
data/: specialities.csv
lib/: appointments.py  db.py  notification.py  utils.py
templates/: appointment.jinja
